# cliv3

./: Cargo.toml  README.md  flake.nix  shell.nix
.github/workflows/: ci.yml  label-check.yml  release.yml
src/: cli.rs  client.rs  config.rs  consts.rs  lib.rs  macros.rs  main.rs  subscription.rs  table.rs
src/commands/: add.rs  completion.rs  connect.rs  delete.rs  docs.rs  domain.rs  down.rs  environment.rs  init.rs  link.rs  list.rs  login.rs  logout.rs  logs.rs  mod.rs  open.rs  protect.rs  run.rs  service.rs  shell.rs  starship.rs  status.rs  unlink.rs  up.rs  variables.rs  version.rs  whoami.rs
src/gql/: mod.rs  schema.graphql
src/gql/mutations/: mod.rs
src/gql/queries/: mod.rs
src/gql/queries/strings/: Projects.graphql  UserProjects.graphql
src/gql/subscriptions/: mod.rs
src/gql/subscriptions/strings/: BuildLogs.graphql
